...
        app:layout_constraintStart_toEndOf="@id/img_movie_poster"
        app:layout_constraintTop_toTopOf="@id/img_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/title" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/storyline"/>

    <TextView
        android:id="@+id/tv_item_storyline_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
...
